--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -12,31 +12,39 @@
     <% end %>
   </div>
 
-  <div class="show-detail-container">
+<div class="show-detail-container">
+  <% if @user.photo.attached? %>
     <%= cl_image_tag @user.photo.key, class: "avatar" %>
-    <%= @user.first_name + " " + @user.last_name %>
-  </div>
-
-  <div class="container text-center mb-5 pb-3">
-    <h2 class="fs-3 text-2b3a67 fw-bold"><%= @user.first_name %>'s Top Artists</h2>
-    <div>
-      <% @top_artists.each do |artist| %>
-        <div>
-          <div style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('<%= artist.image_url %>'); background-size: contain;">
-            <p class="fs-3 py-5 text-white fw-bold"><%= artist.name %></p>
-          </div>
-        </div>
-      <% end %>
-    </div>
-  </div>
+  <% else %>
+    <%= image_tag "Vince", class: "avatar" %>
+  <% end %>
+  <%= @user.first_name + " " + @user.last_name %>
 </div>
 
-<%# <div class="card m-2" style="width: 300px;">
-  <div class="card-header">Top Genres</div>
-  <ul class="list-group list-group-flush">
-    <li class="list-group-item">Item 1</li>
-    <li class="list-group-item">Item 2</li>
-    <li class="list-group-item">Item 3</li>
-    <li class="list-group-item">Item 4</li>
+
+<div class="container px-4">
+
+<h2 class="text-center mb-0"><%= @user.first_name %>'s favorite artists</h2>
+  <ul class="profile-artist-cards">
+    <% @top_artists.each do |artist| %>
+      <li class="card-info" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= artist.image_url %>'); background-size: cover">
+        <h3 class="fs-10 fw-bold text-white"><%= artist.name %></h3>
+      </li>
+    <% end %>
   </ul>
-</div> %>
+</div>
+
+
+<%# change from artists to concerts attending %>
+<%# tart up the UI %>
+<div class="container px-4">
+
+<h2 class="text-center mb-0"><%= @user.first_name %> is attending..</h2>
+ <ul class="profile-artist-cards">
+    <% @top_artists.each do |artist| %>
+      <li class="card-info" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= artist.image_url %>'); background-size: cover">
+        <h3 class="fs-10 fw-bold text-white"><%= artist.name %></h3>
+      </li>
+    <% end %>
+  </ul>
+</div>
