seeds and avatars work

--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -3,7 +3,8 @@
   <div class="search">
     <%= render "shared/search-bar" %>
   </div>
-<!-- AVATARS needs to be in Cloudinary-->
+
+  <!-- AVATARS needs to be in Cloudinary-->
   <% @concerts.each do |concert| %>
     <%= link_to concert_path(concert), class: "concert-a" do %>
       <div class="concert-card">
@@ -12,12 +13,12 @@
         <div class="concert-info">
           <h2><strong><%= concert.artist.name %></strong></h2>
           <p><strong><%= concert.date.strftime("%A %e %B %Y") %></strong></p>
-          <p><%= concert.venue %>, <%= concert.location %></p>
+          <p><%= concert.venue %>, <%= concert.city %></p>
         </div>
         <div class="concert-avatars">
           <% concert.users.without_me(current_user).first(5).each do |user|%>
-            <!-- <%= cl_image_tag user.photo.key, class: "avatar" %> -->
-            <%= image_tag user.avatar, class: "avatar" %>
+            <%= cl_image_tag user.photo.key, class: "avatar" %>
+            <%# <%= image_tag user.avatar, class: "avatar" %>
           <% end %>
           <% if concert.users.without_me(current_user).count > 5 %>
             <div class="avatar">
