--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -22,8 +22,8 @@
         <% @users.each do |user| %>
         <% next if user == current_user  %>
         <div class="friends-invite"> <div class="avatar-name d-flex align-items-center">
-          <!-- <%= cl_image_tag user.photo.key, class: "avatar group-avatar" %> -->
-          <%= image_tag user.avatar, class: "avatar group-avatar" %>
+          <%= cl_image_tag user.photo.key, class: "avatar group-avatar" %>
+          <%# <%= image_tag user.avatar, class: "avatar group-avatar" %>
           <p class="ms-2 mb-0"><%= user.first_name + " " + user.last_name %></p>
         </div>
         <%= check_box_tag 'user_ids[]', user.id %></div>
