protected against non-square avatars and redirected button on home page to go straight to login with spotify

--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -2,7 +2,7 @@
   <%= render "shared/logo_animated" %>
   <div id="tagline">
     <p id="p1">Find your next gig buddies.</p>
-    <%= link_to "Connect Spotify", concerts_path, id:"landing-btn" %>
+    <%= link_to "Connect Spotify", user_spotify_omniauth_authorize_path, id:"landing-btn" %>
     <h5>You'll need to be a Spotify user for this app to work!</h5>
   </div>
 </div>
