changed some stuff with invite logic

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -18,8 +18,7 @@
           </div>
           <div class="concert-avatars">
             <% concert.users.without_me(current_user).first(5).each do |user|%>
-              <!-- <%= cl_image_tag user.photo.key, class: "avatar" %> -->
-              <%= user.avatar %>
+              <%= cl_image_tag user.photo.key, class: "avatar" %>
             <% end %>
             <% if concert.users.without_me(current_user).count > 5 %>
               <div class="avatar">
