--- a/app/views/invitations/index.html.erb
+++ b/app/views/invitations/index.html.erb
@@ -37,7 +37,7 @@
               <div class="btn-decline"><%= link_to "decline", invitation_path(invite, status: 2), data: { turbo_method: :patch } %></div>
             </div>
             <% else %>
-              <p>You've <%= invite.status %> the invitation for <%= concert.artist.name %></p>
+              <p>You've <%= invite.status %> an invitation for <%= concert.artist.name %></p>
           <% end %>
         <% end %>
       <% else %>
