fixed invite badge and re-arranged icons and enlarged

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -10,6 +10,7 @@
   justify-content: space-around;
   align-items: center;
   z-index: 1000;
+  font-size: 22px;
 }
 
 .footer-space {
@@ -61,4 +62,13 @@
   position: absolute;
   top: -4px;
   right: -10px;
+
+}
+
+.make-visible {
+  visibility: visible;
+}
+
+.hide {
+  visibility: hidden;
 }
