--- a/app/views/invitations/index.html.erb
+++ b/app/views/invitations/index.html.erb
@@ -1,5 +1,4 @@
 <div id="page-container-groups-index">
-
   <div class="invitation">
     <h1>Hey <%= current_user.first_name %>! You've been invited to these concerts!</h1>
     <% if @invitations.present? %>
@@ -18,11 +17,8 @@
           <div class="concert-avatars">
             <%= cl_image_tag invite.user.photo.key, class: "avatar" %>
             <p><%= invite.user.first_name + " " + invite.user.last_name %> has invited you to this concert</p>
-
             <% concert.users.without_me(current_user).first(5).each do |user|%>
               <%= cl_image_tag user.photo.key, class: "avatar" %>
-              <%# <%= image_tag user.avatar, class: "avatar"%>
-
             <% end %>
             <% if concert.users.without_me(current_user).count > 5 %>
               <div class="avatar">
@@ -41,10 +37,12 @@
           <% end %>
         <% end %>
       <% else %>
-        <p>You haven't been invited to anything yet!</p>
+        <p id="no-invites" >You haven't been invited to anything yet!</p>
+        <div class="sad-duck"><%= image_tag "sad_duck.gif", class: 'sad-duck' %></div>
       <% end %>
     <% else %>
-      <p>You haven't been invited to anything yet!</p>
+      <p id="no-invites">You haven't been invited to anything yet!</p>
+      <div class="sad-duck"><%= image_tag "sad_duck.gif", class: 'sad-duck' %></div>
     <% end %>
   </div>
 </div>
