--- a/app/assets/stylesheets/components/_invitations.scss
+++ b/app/assets/stylesheets/components/_invitations.scss
@@ -17,7 +17,7 @@
     font-size: 14px;
   }
 
- tatus-buttons {
+ .status-buttons {
   text-align: center;
   display: flex;
   flex-direction: row;
