Sweet alert installed and ready to party

--- a/app/views/invitations/index.html.erb
+++ b/app/views/invitations/index.html.erb
@@ -1,3 +1,13 @@
+<button class="btn btn-primary"
+        data-controller="sweet-alert"
+        data-action="click->sweet-alert#fireModal"
+        data-sweet-alert-title-value="A nice alert"
+        data-sweet-alert-text-value="This is a great alert, isn't it?"
+        data-sweet-alert-icon-value="success"
+        >
+        Click me!
+</button>
+
 <div id="page-container-groups-index">
   <div class="invitation">
     <h1>Hey <%= current_user.first_name %>! You've been invited to these concerts!</h1>
@@ -29,8 +39,8 @@
         </div>
             <!-- invite.status -->
             <div class="status-buttons">
-              <div class="btn-accept"><%= link_to "accept", invitation_path(invite, status: 1), data: { turbo_method: :patch } %></div>
-              <div class="btn-decline"><%= link_to "decline", invitation_path(invite, status: 2), data: { turbo_method: :patch } %></div>
+              <%= render "accepted_button" %>
+              <%= render "declined_button" %>
             </div>
             <% else %>
               <p>You've <%= invite.status %> an invitation for <%= concert.artist.name %></p>
