--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -5,7 +5,7 @@
 <div class="friend-list">
 
   <div class="search">
-    <%= form_with url: concerts_path, method: :get, class: "d-flex" do %>
+    <%= form_with url: new_concert_group_path(@concert), method: :get, class: "d-flex" do %>
     <%= text_field_tag :query,
       params[:query],
       class: "form-control",
