--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -15,14 +15,7 @@
           <p><%= concert.venue %>, <%= concert.city %></p>
         </div>
         <div class="concert-avatars">
-          <% concert.users.without_me(current_user).first(5).each do |user|%>
-            <%= cl_image_tag user.photo.key, class: "avatar" %>
-          <% end %>
-          <% if concert.users.without_me(current_user).count > 5 %>
-            <div class="avatar">
-              + <%= concert.users.without_me(current_user).count - 5 %>
-            </div>
-          <% end %>
+          <%= render "shared/index_avatars", concert: concert %>
         </div>
       </div>
     <% end %>
@@ -31,6 +24,7 @@
   <div>
     <%= link_to "Check for new concerts!", fetch_concerts_concerts_path, data: {turbo_method: :patch} %>
     <p>This might take 60 - 90 seconds...</p>
+    <p>Please do not refresh the page after clicking.</p>
   </div>
 
 </div>
