ben cant do front-end haha

--- a/app/assets/stylesheets/components/_body.scss
+++ b/app/assets/stylesheets/components/_body.scss
@@ -19,6 +19,13 @@
   margin-top: 80px;
 }
 
+#page-container-groupshow {
+  position: relative;
+  min-height: calc(100vh - 130px);
+  margin-bottom: 64px;
+  margin-top: 66px;
+}
+
 #page-container-groups-index {
   position: relative;
   min-height: calc(100vh - 144px);
