--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -1,5 +1,8 @@
 <div id="page-container">
 
+  <h1>Concerts you like</h1>
+  <h2>Invite your mates</h2>
+
   <div class="search">
     <%= render "shared/search-bar" %>
   </div>
