--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -13,6 +13,7 @@
       <div class="show-detail">
         <h2><%= @concert.date.strftime("%A %e %B %Y") %></h2>
         <h3>From <%= @concert.date.strftime("%l:%M %P %Z") %></h3>
+        <%# TIME DOES NOT WORK %>
         <!-- Time.current.in_time_zone("America/New_York").strftime("TZ is: %Z") # => "TZ is: EDT" -->
       </div>
     </div>
