--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -30,7 +30,7 @@
         <% end %>
       <% end %>
     <% else %>
-      <p id="no-groups">You're not attending any concerts yet!</p>
+      <p id="no-invites">You're not attending any concerts yet!</p>
       <div class="sad-duck"><%= image_tag "sad_duck.gif", class: 'sad-duck' %></div>
     <% end %>
   </div>
