--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -4,7 +4,7 @@
   <h2>Invite your mates</h2>
 
   <div class="search">
-    <%= render "shared/search-bar" %>
+    <%= render "shared/search-bar", placeholder: "Explore upcoming gigs" %>
   </div>
 
   <% @concerts.each do |concert| %>
