--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -6,16 +6,7 @@
 <div class="friend-list">
 
   <div class="search">
-    <%= form_with url: new_concert_group_path(@concert), method: :get, class: "d-flex" do %>
-    <%= text_field_tag :query,
-      params[:query],
-      class: "form-control",
-      placeholder: "Find a mate!"
-    %>
-    <button name="button" type="submit" class="btn btn-flat">
-      <img src="https://img.icons8.com/ios-glyphs/30/000000/search--v1.png"/>
-    </button>
-    <% end %>
+    <%= render "shared/search-bar", placeholder: "Find a mate!" %>
   </div>
 
   <h3>Choose who to invite!</h3>
