--- a/app/views/shared/_search-bar.html.erb
+++ b/app/views/shared/_search-bar.html.erb
@@ -3,7 +3,7 @@
     <%= text_field_tag :query,
       params[:query],
       class: "form-control",
-      placeholder: "Explore upcoming gigs"
+      placeholder: placeholder
     %>
     <%= image_submit_tag("icons8-search-30.png", class: "btn btn-flat") %>
     </div>
