Some style stuff

--- a/app/assets/stylesheets/components/_concert_index.scss
+++ b/app/assets/stylesheets/components/_concert_index.scss
@@ -68,3 +68,18 @@ a {
 .concert-avatars, .concert-info {
   z-index: 500;
 }
+
+//
+
+#h1-basic-styling {
+  text-align: center;
+  font-size: 28px;
+  color:#2B3A67;
+  font-weight: 700;
+}
+
+#h2-basic-styling {
+  text-align: center;
+  font-size: 24px;
+  color: #2B3A67;
+}
