--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -162,3 +162,9 @@
   justify-content: center;
   align-items: center;
 }
+
+.concert-header-center {
+  margin: auto;
+  position: relative;
+  text-align: center;
+}
