--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -1,7 +1,7 @@
 <div id="page-container">
 
-  <h1>Concerts you like</h1>
-  <h2>Invite your mates</h2>
+  <h1 id="h1-basic-styling">Upcoming concerts</h1>
+  <h2 id="h2-basic-styling">Invite your mates!</h2>
 
   <div class="search">
     <%= render "shared/search-bar", placeholder: "Explore upcoming gigs" %>
