--- a/app/assets/stylesheets/components/_invitations.scss
+++ b/app/assets/stylesheets/components/_invitations.scss
@@ -17,6 +17,11 @@
     font-size: 14px;
   }
 
+  .past-invites {
+    text-align: center;
+    font-size: 12px;
+  }
+
  .status-buttons {
   text-align: center;
   display: flex;
