--- a/app/views/invitations/index.html.erb
+++ b/app/views/invitations/index.html.erb
@@ -1,47 +1,41 @@
 <div id="page-container-groups-index">
   <div class="invitation">
-    <h1>Hey <%= current_user.first_name %>! You've been invited to these concerts!</h1>
     <% if @invitations.present? %>
       <% if @invitations.any? { |invite| invite.status == "pending" } %>
+        <h1>Hey <%= current_user.first_name %>, you've been invited to a concert!</h1>
+
         <% @invitations.each do |invite| %>
           <% concert = invite.group.concert %>
           <% if invite.status == "pending" %>
             <div class="concert-card">
-            <div class="img-grey" style="background-image: url(<%= concert.artist.image_url %>)"></div>
-            <div class="img-gradient"></div>
-            <div class="concert-info">
-              <h2><strong><%= concert.artist.name %></strong></h2>
-              <p><strong><%= concert.date.strftime("%A %e %B %Y") %></strong></p>
-              <p><%= concert.venue %>, <%= concert.location %></p>
-            </div>
-          <div class="concert-avatars">
-            <%= cl_image_tag invite.user.photo.key, class: "avatar" %>
-            <p><%= invite.user.first_name + " " + invite.user.last_name %> has invited you to this concert</p>
-            <% concert.users.without_me(current_user).first(5).each do |user|%>
-              <%= cl_image_tag user.photo.key, class: "avatar" %>
-            <% end %>
-            <% if concert.users.without_me(current_user).count > 5 %>
-              <div class="avatar">
-                + <%= concert.users.without_me(current_user).count - 5 %>
+              <div class="img-grey" style="background-image: url(<%= concert.artist.image_url %>)"></div>
+              <div class="img-gradient"></div>
+              <div class="concert-info">
+                <h2><strong><%= concert.artist.name %></strong></h2>
+                <p><strong><%= concert.date.strftime("%A %e %B %Y") %></strong></p>
+                <p><%= concert.venue %>, <%= concert.location %></p>
               </div>
-            <% end %>
-          </div>
-        </div>
-            <!-- invite.status -->
+              <div class="concert-avatars">
+                <%= render "shared/index_avatars", concert: concert %>
+              </div>
+    </div>
             <div class="status-buttons">
               <%= render "accept_button", invite: invite %>
               <%= render "decline_button", invite: invite %>
             </div>
-            <% else %>
-              <p>You've <%= invite.status %> an invitation for <%= concert.artist.name %></p>
+          <% end %>
+          <% if invite.status != "pending" %>
+            <div class="past-invites">
+              <p>You <%= invite.status %> an invitation for <%= concert.artist.name %>
+            </div>
           <% end %>
         <% end %>
       <% else %>
-        <p id="no-invites" >You haven't been invited to anything yet!</p>
+        <h1>Hey <%= current_user.first_name %>, you haven't got any invitations at the moment.</h1>
         <div class="sad-duck"><%= image_tag "sad_duck.gif", class: 'sad-duck' %></div>
       <% end %>
     <% else %>
-      <p id="no-invites">You haven't been invited to anything yet!</p>
+      <h1>Hey <%= current_user.first_name %>, you haven't got any invitations at the moment.</h1>
       <div class="sad-duck"><%= image_tag "sad_duck.gif", class: 'sad-duck' %></div>
     <% end %>
   </div>
