--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -26,7 +26,7 @@
 
   TODO: Button does not link to chatroom, so don't click it as it will make a new group.
   <div id="show-btn-container">
-    <%= link_to "Chat with this group!", new_concert_group_path(@concert), id:"show-btn" %>
+    <%= link_to "Chat with this group!", chatroom_path(@group), id:"show-btn" %>
   </div>
 
 </div>
