--- a/app/views/shared/_search-bar.html.erb
+++ b/app/views/shared/_search-bar.html.erb
@@ -1,5 +1,5 @@
   <div class="search-bar">
-  <%= form_with url: concerts_path, method: :get, class: "d-flex" do %>
+  <%= form_with url: path, method: :get, class: "d-flex" do %>
     <%= text_field_tag :query,
       params[:query],
       class: "form-control",
