--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -6,7 +6,7 @@
 <div class="friend-list">
 
   <div class="search">
-    <%= render "shared/search-bar", placeholder: "Find a mate!" %>
+    <%= render "shared/search-bar", placeholder: "Find a mate!", path: new_concert_group_path %>
   </div>
 
   <h3>Choose who to invite!</h3>
@@ -17,7 +17,6 @@
         <% next if user == current_user  %>
         <div class="friends-invite"> <div class="avatar-name d-flex align-items-center">
           <%= cl_image_tag user.photo.key, class: "avatar group-avatar" %>
-          <%# <%= image_tag user.avatar, class: "avatar group-avatar" %>
           <p class="ms-2 mb-0"><%= user.first_name + " " + user.last_name %></p>
         </div>
         <%= check_box_tag 'user_ids[]', user.id %></div>
