--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,16 +1,9 @@
   <%= render "shared/navbar" %>
   <div id="page-container-profile">
   <div class="search">
-  <div class="shared/search-bar">
-  <%= form_with url: search_path, method: :get, class: "d-flex" do %>
-    <%= text_field_tag :query,
-      params[:query],
-      class: "form-control",
-      placeholder: "Find your friends!"%>
-    <%= image_submit_tag("icons8-search-30.png", class: "btn btn-flat") %>
-    </div>
-  <% end %>
+    <%= render "shared/search-bar", placeholder: "Find your friends!", path: search_path %>
 </div>
+
 
 
 <h2 class="text-center mb-0 fs-6 fw-bold username-bootstrap"><% if @user.photo.attached? %>
