--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -4,7 +4,7 @@
   <h2 id="h2-basic-styling">Invite your mates!</h2>
 
   <div class="search">
-    <%= render "shared/search-bar", placeholder: "Explore upcoming gigs", path: concert_path %>
+    <%= render "shared/search-bar", placeholder: "Explore upcoming gigs", path: concerts_path %>
   </div>
 
   <% @concerts.each do |concert| %>
@@ -18,7 +18,7 @@
           <p><%= concert.venue %>, <%= concert.city %></p>
         </div>
         <div class="concert-avatars">
-          <%= render "shared/index_avatars", concert: concert path: concert_path%>
+          <%= render "shared/index_avatars", concert: concert%>
         </div>
       </div>
     <% end %>
