--- a/app/views/shared/_index_avatars.html.erb
+++ b/app/views/shared/_index_avatars.html.erb
@@ -3,10 +3,10 @@
     <%= cl_image_tag user.photo.key, class: "avatar" %>
   <% end %>
   <% if concert.users.without_me(current_user).count > 5 %>
-    <div class="avatar">
+    <div class="avatar-overflow">
       + <%= concert.users.without_me(current_user).count - 5 %>
     </div>
   <% end %>
 <% else %>
-  <div> No friends follow this artist!</div>
+  <div>No friends follow this artist!</div>
 <% end %>
